# QtWidgetsTest

./: CMakeLists.txt  datatypes.cpp  datatypes.h  dbdriver.cpp  dbdriver.h  iconsloader.cpp  iconsloader.h  main.cpp  operatoreditdialog.cpp  operatoreditdialog.h  operatorsdata.cpp  operatorsdata.h  operatorsview.cpp  operatorsview.h  operatorsviewdelegates.cpp  operatorsviewdelegates.h
